# opencode-helix

./: .gitignore  AGENTS.md  Cargo.toml  PROPOSAL.md  README.md
docs/: PROPOSAL-HACKER-UI.md  tachyonfx-effects.md
src/: cli.rs  config.rs  context.rs  main.rs
src/server/: client.rs  discovery.rs  mod.rs
src/tui/: app.rs  ask.rs  effects.rs  mod.rs  select.rs  theme.rs
