[package]
name = "opencode-helix"
version = "0.1.0"
edition = "2021"
description = "External TUI for integrating opencode AI assistant with Helix editor"
license = "MIT"

[[bin]]
name = "opencode-helix"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# SSE parsing
eventsource-stream = "0.2"
futures = "0.3"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time for debug logging
chrono = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Process discovery
sysinfo = "0.32"
libc = "0.2.180"

[profile.release]
lto = true
strip = true
